# product-listing-generator

./: package-lock.json  package.json  pyproject.toml  readme.md  server.js  test-image-generation.js  verify-env.js
genaiproject/: __init__.py  cli.py  config.py  pipeline.py  providers.py  schemas.py  storage.py
genaiproject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
genaiproject/api/: main.py
outputs/job-20251204-160927-c9d3e06f/outputs/: assets.json  metadata.json  result.json
outputs/job-20251204-161300-d23d7d99/outputs/: assets.json  metadata.json  result.json
public/: index.html  script.js  style.css
